# proxypose

./: .gitignore  README.md  pyproject.toml
assets/video/: baseball_swing.points.json
configs/generation/: default.yaml
configs/tracking/: default.yaml
inference/: __init__.py  bundle_adjustment.py  diffsynth_patches.py  evaluate_all.py  full_inference.py  generate_proxy.py  model_utils.py  render_proxy.py  track_proxy.py  utils.py
inference/annotation/: annotate.css  annotate.html  annotate.js  annotate_prompt.py  depth_anything.py
